I have a HiDPI screen (15'' 3840x2160 -> physical DPI = 282), and I have KDE/Plasma configured to a scaling factor of 1.5 and a DPI of 168. I do not want to set it to 192 because I like to have a bit more screen estate, even though the physical DPI is (a lot) higher. Because it's below 192, the HiDPI-mode in LibreOffice is not enabled. Even though the fonts are properly scaled according to DPI of 168, the toolbar buttons are unclickably small, probably assuming a DPI of 96 or something in that direction. Plasma allows me to set a scaling factor to my own liking and a DPI-setting to my own liking, why is LibreOffice forcing me a specific threshold for HiDPI to kick in? Icons should just be scaled based on actual DPI rather than switch to different icons on a specific threshold. I'd rather have not-perfectly-scaled images than unclickable (but sharp ;)) images. It would be great if LibreOffice would respect the scaling factor I configured in Plasma.
Confirmed. We currently support only integer scaling factors.
Tomaž Vajngerl committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=69b6ab1f8de08b3418fd42d56076a73d40a29229 tdf#100164 change scaling unit to precentage for *.5x factors It will be available in 5.3.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello Tomaž, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?
A polite ping to Tomaž Vajngerl: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
Does LibreOffice really "only" support scaling in 50% steps? The comment 2 would make me think so, and that would explain a lot of issues in HiDPI screens. Windows allows to adjust the scaling in 25% steps (100%, 125%, 150%, 175%, 200% aso). I personally use 175% and a lot of UI-Elements are too small. I think, that could be the root cause of this. So can we "update" that patch, to support scaling in 25% steps?
Dear Egbert, To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from https://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://web.libera.chat/?settings=#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug